--- a/flutter_mobx/pubspec.yaml
+++ b/flutter_mobx/pubspec.yaml
@@ -3,8 +3,7 @@ description:
   Flutter integration for MobX. It provides a set of Observer widgets that automatically rebuild
   when the tracked observables change.
 version: 2.0.5
-
-homepage: https://github.com/mobxjs/mobx.dart
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,7 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mobx: ^2.0.6
+  mobx: 
+    git:
+      url: https://github.com/vini2001/mobx.dart.git
+      ref: actions_exceptions
+      path: mobx
 
 dev_dependencies:
   build_runner: ^2.0.6
